--- a/encode/index.html
+++ b/encode/index.html
@@ -13,12 +13,14 @@
       <!-- Este es un ejemplo creado a base del ejemplo Bootrstrap: sign-in  -->
       <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
       <!-- Bootstrap core CSS -->
+      <!-- Remote -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-      <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+      <!-- Local -->
+      <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
       <!-- Custom styles for this template -->
-      <link href="./assets/css/signin.css" rel="stylesheet">
+      <link href="../assets/css/signin.css" rel="stylesheet">
       <!-- Custom styles for the modal window -->
-      <link href="./assets/css/modals.css" rel="stylesheet">
+      <link href="../assets/css/modals.css" rel="stylesheet">
 
   </head>
 
@@ -27,7 +29,7 @@
       <main class="form-signin">
 
           <!-- LOGO DE LA @APP -->
-          <img class="mb-4" src="./assets/img/logo.png" alt="" width="70" height="70">
+          <img class="mb-4" src="../assets/img/logo.png" alt="" width="70" height="70">
 
           <!-- En este apartado el usuario digita el texto plano a cifrar -->
           <div class="form-floating">
@@ -89,7 +91,7 @@
 
         </main>
 
-        <script src="./assets/js/encode.js"></script>
+        <script src="../assets/js/encode.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
