--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h1 class="h3 mb-3 fw-normal" >¿QUÉ QUIERES HACER?</h1>
  
           <!-- * OPCION UNO * -->
-          <button onclick="location.href='encode.html'" class="w-100 btn btn-lg btn-primary">CIFRAR</button>
+          <button onclick="location.href='./encode/index.html'" class="w-100 btn btn-lg btn-primary">CIFRAR</button>
           
           <!-- * DIV ESPACIO * -->
           <!-- Cuyo objetivo es crear un espacio entre ambos elementos  ...
@@ -39,7 +39,7 @@
           <div class="form-floating"><br></div>
 
           <!-- * OPCION DOS * -->
-          <button onclick="location.href='decode.html'" class="w-100 btn btn-lg btn-primary">DESCIFRAR</button>
+          <button onclick="location.href='./decode/index.html'" class="w-100 btn btn-lg btn-primary">DESCIFRAR</button>
 
           <!-- * "DERECHOS" * -->
           <p class="mt-5 mb-3 text-muted">By: @lesther_xm</p>
