updating documentation/comments in the code

--- a/decode/index.html
+++ b/decode/index.html
@@ -76,7 +76,7 @@
 
                 <!-- CUERPO -->
                 <div class="modal-body">
-                  Tanto el Texto Cifrado como la Clave de Cifrado son campos necesarios; por ende los tienes que proporcionar.
+                  Tanto la Clave de Cifrado como el Texto Cifrado son campos necesarios; por ende los tienes que proporcionar.
                 </div>
 
                 <!-- PIE -->
