a little change for test git and github connection

--- a/encode/index.html
+++ b/encode/index.html
@@ -43,7 +43,7 @@
           <!-- En este apartado el usuario digita la clave de cifrado -->
           <div class="form-floating">
             <input type="text" class="form-control" id="passEncode" placeholder="Clave de Cifrado">
-            <label for="floatingInput">Clave de Cifrado</label>
+            <label for="floatingInput">Tu Clave de Cifrado</label>
           </div>
           
           <!-- * DIV ESPACIO * -->
